add Opponents propositions + selectable opponent + refresh opponents + Context battleData + fight button

--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,13 @@
   float:left;
 }
 
-.selected {
+.selectedAlly {
   background-color: #98fb98;
 }
 
+.selectedEnnemy{
+  background-color: #ffcccb;
+}
 .layout {
   height: 100vh;
 
@@ -36,4 +39,9 @@
 .refreshButton {
   float: right;
   margin: 3%;
+}
+
+.BattleButton {
+  width: 100%;
+  height: 50%;
 }
