refactor code-> component into function with Hooks

--- a/src/App.css
+++ b/src/App.css
@@ -108,3 +108,11 @@ html, body, #root {
   text-align: right;
 
 }
+
+#noMM {
+  background-image: url('../src/images/preview.png');
+}
+
+#blurBg {
+  backdrop-filter: blur(8px);
+}
